TAG: qcreports_db-6-0-23-?
DATE: 01/31/2024
STAFF: lec
wts2-1382/fl2-717/add relevance
mgd/GO_PM2GeneRefsNotInMGI.py

TAG: qcreports_db-6-0-23-1
DATE: 01/31/2024
STAFF: lec
#       modified:   mgd/VOC_InvalidProperties.py
fix bug

TAG: qcreports_db-6-0-22-76
DATE: 01/30/2024
STAFF: lec
wts2-1390/fl2-712/Custom report for batch allele retrieval
(qcreports/pwi/ALL_CheckByCreationDate.py)

TAG: qcreports_db-6-0-22-75
DATE: 12/05/2023
STAFF: sc
New report: weekly/HOM_MouseNoHuman.py

TAG: qcreports_db-6-0-22-74
DATE: 11/30/2023
STAFF: dbm
qcr.shtml: remove link to arrayexpload (retired)

TAG: qcreports_db-6-0-22-73
DATE: 11/28/2023
STAFF: lec
wts2-1343/fl2-653/Custom GXD report for highlight

TAG: qcreports_db-6-0-22-72
DATE: 11/21/2023
STAFF: lec
wts2-1342/fl2-649/one more for the PRB_Reference.sql.rpt/rename it

TAG: qcreports_db-6-0-22-70
DATE: 11/14/2023
STAFF: dbm
qcr.shtml: remove link to genmapload (retired)

TAG: qcreports_db-6-0-22-71
TAG: qcreports_db-6-0-22-69
DATE: 11/13/2023
STAFF: lec
wts2-1331/fl2-637/Update Images QC
#       modified:   mgd/GXD_Images.py

TAG: qcreports_db-6-0-22-68
DATE: 11/13/2023
STAFF: lec
wts2-1330/fl2-636/Duplicate RNAscope Probes (Mm-%)
#       modified:   monthly/PRB_Reference.sql

TAG: qcreports_db-6-0-22-67
TAG: qcreports_db-6-0-22-66
DATE: 11/09/2023
STAFF: lec
wts2-1328/fl2-633/Gene Expr Patterns papers to full code
#       modified:   weekly/GXD_FullCode.py

TAG: qcreports_db-6-0-22-65
DATE: 11/03/2023
STAFF: lec
wts2-1321/fl2-616/add PMID to Invalid Inferred From Values report
#       modified:   mgd/VOC_InvalidInferred.py

TAG: qcreports_db-6-0-22-64
DATE: 11/01/2023
STAFF: lec
wts2-1315/fl2-612/GXD HT Raw Sample Value Search: return by experiment (not sample)
#       new file:   GXD_HTRawSampleByValue2.py
#       modified:   pwireports.txt

TAG: qcreports_db-6-0-22-63
DATE: 10/25/2023
STAFF: dbm
wts2-1313/fl2-602/add sunday/inferred from linkout errors to GO/QC

TAG: qcreports_db-6-0-22-62
DATE: 10/19/2023
STAFF: dbm