@@ -86,6 +86,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/TAL_dupe_allele.rpt">Duplicated GenTar Targeted Alleles</A> <B>(anna)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/TAL_check_superscript.rpt">TAL Allele Superscript Mismatches (excluding Derivative Alleles)</A> <B>(anna)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/TAL_multiple_project_ids.rpt">Marker/Allele Superscripts with multiple Project IDs in the TAL input file</A> <B>(anna)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/ALL_PM2GeneNoMP.rpt">Papers not in public MGI for genes with no MP annotations</A> <B>(csmith)</B>
 </OL>
 
 <A NAME="variants"><B>Allele Variants (laurens)</B> </A>
@@ -232,7 +233,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GO_EvidenceCodeStats.sql.rpt">Report: Total # of Annotations by GO Evidence Code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/MRK_GOAnnot.rpt">Report: Total GO Annotations per Gene</A> <B>(csmith)</B>
 <LI><A HREF="/data/reports/qcreports_db/output/GO_GPI_verify.rpt">Report: Verify GPI file</A> <B>(dph)</B>
-<LI><A HREF="/data/reports/qcreports_db/output/GO_PM2GeneRefsNotInMGI.rpt">Report: Papers not in MGI for genes without experimental GO annotations</A> <B>(krc)</B>
+<LI><A HREF="/data/reports/qcreports_db/output/GO_PM2GeneRefsNotInMGI.rpt">Report: Papers not in Public MGI for genes without experimental GO annotations</A> <B>(krc)</B>
 <LI><A HREF="/data/loads/mgi/mgicacheload/logs/inferredfrom.csh.log">Report: Sunday/Inferred From Text/linkout errors</A> <B>(ln)</B>
 </OL>
 
