@@ -2,7 +2,9 @@ TAG: qcreports_db-6-0-23-?
 DATE: 01/31/2024
 STAFF: lec
 wts2-1382/fl2-717/add relevance
-mgd/GO_PM2GeneRefsNotInMGI.py
+wts2-1381/fl2-721/New QC report: New PubMed2Gene References for markers with no literature MP annot.
+#       new file:   mgd/ALL_PM2GeneNoMP.py
+#       modified:   mgd/GO_PM2GeneRefsNotInMGI.py
 
 TAG: qcreports_db-6-0-23-1
 DATE: 01/31/2024
